--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -892,7 +892,7 @@ input, select, textarea {
 
 /* Mobile */
 
-	@media screen and (max-width: 736px) {
+	@media screen and (max-width: 100%;max-height: 100%) {
 
 		/* Basic */
 
