--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1000,7 +1000,7 @@ input, select, textarea {
 
 /* Mobile (Portrait) */
 
-	@media screen and (max-width: 480px) {
+	@media screen and (max-width: 100%;max-height: 100%) {
 
 		/* BG */
 
