--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1000,7 +1000,7 @@ input, select, textarea {
 
 /* Mobile (Portrait) */
 
-	@media screen and (max-width: 100%;max-height: 100%) {
+	@media screen and (max-width: 480px) {
 
 		/* BG */
 
@@ -1070,7 +1070,7 @@ input, select, textarea {
 		}
 
 		#bg {
-			background-size: 412.5px auto;
+			background-size: max-width: 100%;max-height: 100%; /*412.5px auto;*/
 			width: 1237.5px;
 		}
 
